--- a/app/shared/score/scoreView.html
+++ b/app/shared/score/scoreView.html
@@ -1,4 +1,4 @@
-<div class="user-stats">
+<div class="user-score">
     <div class="nb-incorrect">
         <div class="title">Incorrects</div>
         <div class="nb">{{incorrects.length}}</div>
