--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
 <head>
     <title>Kanji learning</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/odometer.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/insert.css">
     <link rel="stylesheet" href="assets/css/exercice.css">
     <link rel="stylesheet" href="assets/css/results.css">
-    <link rel="stylesheet" href="assets/css/stats.css">
+    <link rel="stylesheet" href="assets/css/score.css">
     <link rel="stylesheet" href="assets/css/top-bar.css">
     <link rel="stylesheet" href="assets/css/picker.css">
     <link rel="stylesheet" href="assets/css/dictionnary.css">
+    <link rel="stylesheet" href="assets/css/statistics.css">
     <script type="application/javascript" src="assets/libs/angular.js"></script>
     <script type="application/javascript" src="assets/libs/angular-route.min.js"></script>
     <script type="application/javascript" src="assets/libs/jquery.js"></script>
+    <script type="application/javascript" src="assets/libs/odometer.min.js"></script>
     <script type="application/javascript" src="app/app.module.js"></script>
     <script type="application/javascript" src="app/app.routes.js"></script>
     <script type="application/javascript" src="app/shared/services/userInfoFactory.js"></script>
@@ -27,7 +30,8 @@
     <script type="application/javascript" src="app/components/picker/pickerController.js"></script>
     <script type="application/javascript" src="app/components/insert/insertController.js"></script>
     <script type="application/javascript" src="app/components/dictionnary/dictionnaryController.js"></script>
-    <script type="application/javascript" src="app/shared/stats/statsDirective.js"></script>
+    <script type="application/javascript" src="app/components/statistics/statisticsController.js"></script>
+    <script type="application/javascript" src="app/shared/score/scoreDirective.js"></script>
     <script type="application/javascript" src="app/shared/top-bar/topBarDirective.js"></script>
     <script type="application/javascript" src="app/shared/loading/loadingDirective.js"></script>
 </head>
