Added animations on statistics screen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Kanji learning</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/odometer.css">
+    <link rel="stylesheet" href="assets/css/animations.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/insert.css">
     <link rel="stylesheet" href="assets/css/exercice.css">
