--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script type="application/javascript" src="app/components/menu/menuController.js"></script>
     <script type="application/javascript" src="app/components/reading/readingController.js"></script>
     <script type="application/javascript" src="app/components/writing/writingController.js"></script>
+    <script type="application/javascript" src="app/components/meaning/meaningController.js"></script>
     <script type="application/javascript" src="app/components/results/resultsController.js"></script>
     <script type="application/javascript" src="app/components/picker/pickerController.js"></script>
     <script type="application/javascript" src="app/components/insert/insertController.js"></script>
