Added user management + API update
- Can now create account to save definitively progression
- API improved

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="assets/css/odometer.css">
     <link rel="stylesheet" href="assets/css/animations.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/register.css">
+    <link rel="stylesheet" href="assets/css/login.css">
     <link rel="stylesheet" href="assets/css/insert.css">
     <link rel="stylesheet" href="assets/css/exercice.css">
     <link rel="stylesheet" href="assets/css/results.css">
@@ -16,7 +18,6 @@
     <link rel="stylesheet" href="assets/css/top-bar.css">
     <link rel="stylesheet" href="assets/css/picker.css">
     <link rel="stylesheet" href="assets/css/dictionnary.css">
-    <link rel="stylesheet" href="assets/css/statistics.css">
     <script type="application/javascript" src="assets/libs/angular.js"></script>
     <script type="application/javascript" src="assets/libs/angular-route.min.js"></script>
     <script type="application/javascript" src="assets/libs/jquery.js"></script>
@@ -25,6 +26,8 @@
     <script type="application/javascript" src="app/app.routes.js"></script>
     <script type="application/javascript" src="app/shared/services/userInfoFactory.js"></script>
     <script type="application/javascript" src="app/components/menu/menuController.js"></script>
+    <script type="application/javascript" src="app/components/register/registerController.js"></script>
+    <script type="application/javascript" src="app/components/login/loginController.js"></script>
     <script type="application/javascript" src="app/components/reading/readingController.js"></script>
     <script type="application/javascript" src="app/components/writing/writingController.js"></script>
     <script type="application/javascript" src="app/components/meaning/meaningController.js"></script>
