--- a/app/shared/top-bar/topBarView.html
+++ b/app/shared/top-bar/topBarView.html
@@ -1,4 +1,6 @@
 <div class='top-bar'>
     <div ng-if="withBack" class='back-button fa fa-arrow-circle-o-left' ng-click="back()"></div>
     <div class="page-title">{{title}}</div> 
+    <div class="userinfo" ng-if="loginInfo && session.status==400"><a href='login' class='login'>Sign in</a> <a href='register' class='register'>Register</a></div>
+    <div class="userinfo" ng-if="loginInfo && session.status==200">Welcome {{session.username}} <button class='logout' type='button' ng-click='logout()'>Logout</button></div>
 </div>
